# Pystykorva

./: .editorconfig  .gitignore  BoostGrep.props  BoostGrep.sln  CMakeLists.txt  GoogleTest.cmake  Pystykorva.cppcheck  Pystykorva.props  Pystykorva.sln  ReadMe.md
.github/workflows/: clang.yml  cppcheck.yml  gcc.yml  msvc.yml  ubuntu.yml  windows.yml
BoostGrepCLI/: BoostGrepCLI.vcxproj  Main.cpp  PCH.hpp
BoostGrepLib/: BoostGrep.cpp  BoostGrep.hpp  BoostGrepLib.vcxproj
BoostGrepTests/: BoostGrepTests.vcxproj  PCH.cpp  PCH.hpp  TimeTests.cpp
PystykorvaCLI/: CMakeLists.txt  CmdArgs.cpp  CmdArgs.hpp  Console.cpp  Console.hpp  Main.cpp  PCH.cpp  PCH.hpp  PystykorvaCLI.pch  PystykorvaCLI.vcxproj  Time.hpp
PystykorvaLib/: BufferedStream.cpp  BufferedStream.hpp  CMakeLists.txt  EncodingDetector.cpp  EncodingDetector.hpp  LineAnalyzer.cpp  LineAnalyzer.hpp  MemoryMappedFile.cpp  MemoryMappedFile.hpp  NonCopyable.hpp  PCH.cpp  PCH.hpp  Puukko.cpp  Puukko.hpp  Pystykorva.cpp  Pystykorva.hpp  PystykorvaLib.pch  PystykorvaLib.vcxproj  TextProcessor.cpp  TextProcessor.hpp  TextReplacer.cpp  TextReplacer.hpp  TextSearcher.cpp  TextSearcher.hpp  UnicodeConverter.cpp  UnicodeConverter.hpp  Wildcard.cpp  Wildcard.hpp
PystykorvaTests/: BufferedStreamTests.cpp  CMakeLists.txt  EncodingDetectorTests.cpp  LineAnalyzerTests.cpp  Main.cpp  MockFile.hpp  PCH.cpp  PCH.hpp  PystykorvaTests.cpp  PystykorvaTests.pch  PystykorvaTests.vcxproj  TextProcessorTests.cpp  TextReplacerTests.cpp  TextSearcherTests.cpp  TimeTests.cpp  UnicodeConverterTests.cpp  WildcardTest.cpp
PystykorvaTests/Win32/: MemoryLeakListener.cpp  MemoryLeakListener.hpp
