if(CMAKE_SYSTEM_NAME MATCHES "Windows")
	file(GLOB SourceFiles "*.cpp" "Win32/*.cpp")
	set(ExecutableName "PystykorvaTests")
	set(LibraryName "LibPystykorva")
else()
	file(GLOB SourceFiles "*.cpp")
	set(ExecutableName "pystykorva_tests")
	set(LibraryName "libpystykorva")
endif()

add_executable(${ExecutableName} ${SourceFiles})
add_test(NAME ${ExecutableName} COMMAND $<TARGET_FILE:${ExecutableName}>)
target_precompile_headers(${ExecutableName} PRIVATE "PystykorvaTests.pch")
target_link_libraries(${ExecutableName} LINK_PRIVATE ${LibraryName} gtest)
